{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 168,
  "lineage": "1bad8c8f-beed-10d0-ef22-6e69fced7b31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mySQL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-76166b19",
            "arn": "arn:aws:ec2:ap-south-1:380301410432:instance/i-0afc5e512f77b399d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afc5e512f77b399d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "infra_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db07c83b8387badb",
            "private_dns": "ip-10-0-0-22.ap-south-1.compute.internal",
            "private_ip": "10.0.0.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00cd25fb0b61feea8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0145ce44f690da2e6",
            "tags": {
              "Name": "Private server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a590251e6829484a"
            ]
          },
          "dependencies": [
            "aws_key_pair.infra_key",
            "aws_security_group.firewall_private",
            "aws_subnet.privateSubnet",
            "aws_vpc.myNetwork",
            "local_file.infra_key",
            "tls_private_key.infra_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03100b7790806a77e",
            "arn": "arn:aws:ec2:ap-south-1:380301410432:instance/i-0564c9aa5173db2dd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0564c9aa5173db2dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "infra_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-070421d4ef67544ac",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "13.126.77.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0159119ae6b441361",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0637c0994743fa694",
            "tags": {
              "Name": "Public server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03789f08013ae6f49"
            ]
          },
          "dependencies": [
            "aws_key_pair.infra_key",
            "aws_security_group.firewall_public",
            "aws_subnet.publicSubnet",
            "aws_vpc.myNetwork",
            "local_file.infra_key",
            "tls_private_key.infra_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:internet-gateway/igw-0b8b1c8fad10dc037",
            "id": "igw-0b8b1c8fad10dc037",
            "owner_id": "380301410432",
            "tags": {
              "Name": "gw"
            },
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de93ecd6e6bce09a",
            "owner_id": "380301410432",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8b1c8fad10dc037",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRoute"
            },
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b411347654ace5e0",
            "route_table_id": "rtb-0de93ecd6e6bce09a",
            "subnet_id": "subnet-0637c0994743fa694"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.publicSubnet",
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:security-group/sg-0a590251e6829484a",
            "description": "Allow subnet trafic for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a590251e6829484a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "firewall_private",
            "name_prefix": "",
            "owner_id": "380301410432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "firewall_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:security-group/sg-03789f08013ae6f49",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03789f08013ae6f49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "firewall_public",
            "name_prefix": "",
            "owner_id": "380301410432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "firewall_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:subnet/subnet-0145ce44f690da2e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0145ce44f690da2e6",
            "map_public_ip_on_launch": false,
            "owner_id": "380301410432",
            "tags": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:subnet/subnet-0637c0994743fa694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0637c0994743fa694",
            "map_public_ip_on_launch": true,
            "owner_id": "380301410432",
            "tags": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-0d5db2bea8a481311"
          },
          "dependencies": [
            "aws_vpc.myNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myNetwork",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:380301410432:vpc/vpc-0d5db2bea8a481311",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bec5f5a75801a7e",
            "default_route_table_id": "rtb-07f4653f1ac07161a",
            "default_security_group_id": "sg-04542a3dc7814fa59",
            "dhcp_options_id": "dopt-b258a0d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d5db2bea8a481311",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07f4653f1ac07161a",
            "owner_id": "380301410432",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}